--- a/aws/json/alarm-config.json
+++ b/aws/json/alarm-config.json
@@ -3,7 +3,7 @@
     "AlarmDescription": "This alarm would be triggered if the daily estimated charges exceeds 50$",
     "ActionsEnabled": true,
     "AlarmActions": [
-        "arn:aws:sns:us-east-1:***REMOVED***:AWS-Bootcamp-Billing-Alarm-Topic"
+        "arn:aws:sns:us-east-1:152725004650:AWS-Bootcamp-Billing-Alarm-Topic"
     ],
     "EvaluationPeriods": 1,
     "DatapointsToAlarm": 1,
