--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,17 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
       sudo apt install -y postgresql-client-13 libpq-dev
+
+ports: 
+  - name: psql-database
+    port: 5432
+    visibility: public 
+  - name: app 
+    port: 3000
+    visibility: public 
+    
+
 vscode:
   extensions:
+    - cweijan.vscode-postgresql-client2
     - 42Crunch.vscode-openapi
