--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -9,10 +9,15 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
+RUN chmod +x run_script.sh
+
 ENV FLASK_ENV=development
 
 EXPOSE ${PORT}
 
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
+CMD ["./run_script.sh"]
+
+
+# CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
 
 
