--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -1,5 +1,6 @@
-
-FROM python:3.10-slim-buster
+# Multi-stage builds
+# Stage 1: Build app
+FROM python:3.10-slim-buster as builder 
 
 WORKDIR /backend-flask
 
@@ -8,6 +9,14 @@ COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
 COPY . .
+
+
+# Stage 2: Run app
+FROM python:3.10-slim-buster
+
+WORKDIR /backend-flask
+
+COPY --from=builder . .
 
 RUN chmod +x run_script.sh
 
