--- a/backend-flask/Dockerfile.multi_stage
+++ b/backend-flask/Dockerfile.multi_stage
@@ -18,7 +18,11 @@ WORKDIR /backend-flask
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
+## Create sergio user and group
+RUN addgroup --system sergio && adduser --system --ingroup sergio sergio
 
+## Set ownership of the application directory to the sergio user and group
+RUN chown -R sergio:sergio /backend-flask
 
 ## Run Stage
 FROM ${python_image}
@@ -27,12 +31,26 @@ RUN apt-get update && \
     apt-get install --no-install-recommends --asume-yes \ 
     libpq5
 
+## Create sergio user and group
+RUN addgroup --system sergio && adduser --system --ingroup sergio sergio
+
+## Set ownership of the application directory to the sergio user and group
+RUN chown -R sergio:sergio /backend-flask
+
 ## Copy the virtual environment from the `build` stage 
 COPY --from=build /venv /venv
 ENV PATH=/venv/bin:$PATH
+
+## Switch to the sergio user
+USER sergio
 
 # Finally, copy in application 
 COPY . . 
 
 RUN chmod + x "run_script.sh"
 ENTRYPOINT [ "./run_script.sh" ]
+
+
+
+# libqp-dev
+# The QP (Quoted Printable) format is a technique for encoding data in a format that can be safely transmitted over email or other messaging systems. It's used to ensure that special characters, such as spaces or non-ASCII characters, are properly represented and can be reliably transmitted and displayed on different systems.
