--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@ tasks:
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
-    init: |
+    before: |
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
@@ -14,17 +14,19 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
       sudo apt install -y postgresql-client-13 libpq-dev
-
-ports: 
-  - name: psql-database
-    port: 5432
-    visibility: public 
-  - name: app 
-    port: 3000
-    visibility: public 
-    
-
 vscode:
   extensions:
-    - cweijan.vscode-postgresql-client2
     - 42Crunch.vscode-openapi
+    - cweijan.vscode-postgresql-client2
+
+ports:
+  - name: frontend
+    port: 3000
+    onOpen: open-browser
+    visibility: public
+  - name: backend
+    port: 4567
+    visibility: public
+  - name: xray-daemon
+    port: 2000
+    visibility: public
