--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -1,10 +1,12 @@
 flask
 flask-cors
 
-aws-xray-sdk
-
 opentelemetry-api 
 opentelemetry-sdk 
 opentelemetry-exporter-otlp-proto-http
 opentelemetry-instrumentation-flask 
 opentelemetry-instrumentation-requests
+
+aws-xray-sdk
+
+watchtower
