comment out x-ray daemon and fix the BACKEND_HEALTH_CHECK_URL expansion

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -6,6 +6,6 @@ services:
   frontend-react-js:
     env_file: 
       - ./docker/local/frontend-react-js.env
-  xray-daemon:
-    env_file: 
-      - ./docker/local/xray-daemon.env 
+  # xray-daemon:
+  #   env_file: 
+  #     - ./docker/local/xray-daemon.env 
