add frontend environment for gitpod env

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -23,6 +23,7 @@ services:
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       ## Add rollbar access token environment variables
       ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
+
     build: ./backend-flask
     ports:
       - "4567:4567"
@@ -40,6 +41,12 @@ services:
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_USER_POOLS_ID: "${AWS_USER_POOLS_ID}"
+      REACT_APP_CLIENT_ID: "${APP_CLIENT_ID}"
+      REACT_APP_AWS_USER_POOLS_WEB_CLIENT_ID: "${REACT_APP_CLIENT_ID}"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
