add token verification server-side

--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -1,43 +1,16 @@
-## Build Stage 
-FROM python:3.10-slim-buster AS builder
+FROM python:3.10-slim-buster
 
-# Install container dependencies 
-RUN apt update
-
-# Create virtual environment to install all dependencies
-RUN python3 -m venv venv
-ENV PATH=/venv/bin:$PATH
-
-# Install python 
 WORKDIR /backend-flask
-COPY requirements.txt .
+
+COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
+COPY . .
 
+ENV FLASK_ENV=development
 
-## Run Stage
-FROM python:3.10-slim-buster
-WORKDIR /backend-flask
+EXPOSE ${PORT}
 
-## Create sergio user and group
-RUN addgroup --system sergio && adduser --system --ingroup sergio sergio
+RUN chmod +x "./run_script.sh"
 
-## Set ownership of the application directory to the sergio user and group
-RUN chown -R sergio:sergio /backend-flask
-
-
-RUN apt-get update
-RUN apt-get install -y curl
-
-## Copy the virtual environment from the `builder` stage 
-COPY --from=builder /venv /venv
-ENV PATH=/venv/bin:$PATH
-
-# Finally, copy in application 
-COPY --chown=sergio:sergio . . 
-USER sergio
-
-RUN chmod +x run_script.sh
-
-
-ENTRYPOINT [ "./run_script.sh" ]
+CMD [ "./run_script.sh"]
